# OBCX

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  DOCUMENTATION.md  Doxyfile  generate_docs.sh  vcpkg.json
examples/: CMakeLists.txt  QQBot.cpp  TelegramBot.cpp  heavy_task.cpp  qq_bot.cpp  telegram_bot.cpp
examples/BridgeBot/: Config.cpp  Config.hpp  DatabaseManager.hpp  MediaProcessor.cpp  MediaProcessor.hpp  RetryQueueManager.cpp  RetryQueueManager.hpp  TelegramHandler.cpp  TelegramHandler.hpp
examples/BridgeBot/qq/: QQMediaProcessor.hpp
examples/BridgeBot/telegram/: TelegramCommandHandler.cpp  TelegramEventHandler.cpp  TelegramMediaProcessor.cpp  TelegramMediaProcessor.hpp  TelegramMessageFormatter.cpp
examples/plugins/: CMakeLists.txt  example_plug_config.toml
examples/plugins/BridgeBot/: Config.cpp  DatabaseManager.cpp  PathManager.cpp  PathManager.hpp  QQHandler.cpp  QQHandler.hpp  TelegramHandler_original.cpp  config.cpp  media_processor.cpp  media_processor.hpp  qq_handler.cpp  qq_handler.hpp  retry_queue_manager.hpp  telegram_handler.cpp  telegram_handler.hpp  telegram_handler_original.cpp
examples/plugins/BridgeBot/qq/: QQMediaProcessor.cpp  qq_media_processor.cpp
examples/plugins/BridgeBot/telegram/: TelegramCommandHandler.hpp  TelegramEventHandler.hpp  TelegramMessageFormatter.hpp  telegram_media_processor.hpp
examples/plugins/dependency/bridge_bot/: config.cpp  config.hpp  database_manager.cpp  database_manager.hpp  media_processor.cpp  path_manager.cpp  qq_handler.cpp  qq_handler.hpp  retry_queue_manager.cpp  retry_queue_manager.hpp  telegram_handler.cpp  telegram_handler.hpp  telegram_handler_original.cpp
examples/plugins/dependency/bridge_bot/qq/: qq_media_processor.hpp
examples/plugins/dependency/bridge_bot/telegram/: telegram_command_handler.cpp  telegram_command_handler.hpp  telegram_event_handler.cpp  telegram_event_handler.hpp  telegram_media_processor.cpp  telegram_message_formatter.cpp  telegram_message_formatter.hpp
examples/plugins/qq_to_tg/: CMakeLists.txt  QQToTGPlugin.cpp  QQToTGPlugin.hpp  qq_to_tg_plugin.cpp  qq_to_tg_plugin.hpp
examples/plugins/tg_to_qq/: CMakeLists.txt  TGToQQPlugin.cpp  TGToQQPlugin.hpp  tg_to_qq_plugin.cpp  tg_to_qq_plugin.hpp
examples/plugins/torrent_downloader/: .gitignore  CMakeLists.txt  README.md  config_example.toml  qbittorrent_client.cpp  qbittorrent_client.hpp  rclone_client.cpp  rclone_client.hpp  torrent_downloader_plugin.cpp  torrent_downloader_plugin.hpp
include/common/: MediaConverter.hpp  MessageType.hpp  PluginManager.hpp  config_loader.hpp  json_utils.hpp  logger.hpp  message_type.hpp  plugin_manager.hpp
include/core/: EventDispatcher.hpp  QQBot.hpp  TGBot.hpp  TaskScheduler.hpp  event_dispatcher.hpp  qq_bot.hpp  task_scheduler.hpp  tg_bot.hpp
include/interface/: IBot.hpp  IPlugin.hpp  IProtolAdapter.hpp
include/interfaces/: bot.hpp  connection_manager.hpp  plugin.hpp  protocol_adapter.hpp
include/network/: HttpClient.hpp  IConnectionManager.hpp  ProxyHttpClient.hpp  WebsocketClient.hpp  http_client.hpp  proxy_http_client.hpp
include/onebot11/adapter/: EventConverter.hpp  MessageConverter.hpp  ProtocolAdapter.hpp  event_converter.hpp  message_converter.hpp  protocol_adapter.hpp
include/onebot11/network/http/: ConnectionManager.hpp  connection_manager.hpp
include/onebot11/network/websocket/: ConnectionManager.hpp  connection_manager.hpp
include/telegram/adapter/: ProtocolAdapter.hpp  protocol_adapter.hpp
include/telegram/network/: ConnectionManager.hpp  connection_manager.hpp
src/: CMakeLists.txt
src/common/: ConfigLoader.cpp  JsonUtils.cpp  Logger.cpp  MediaConverter.cpp  MessageType.cpp  PluginManager.cpp  config_loader.cpp  json_utils.cpp  logger.cpp  media_converter.cpp  message_type.cpp  plugin_manager.cpp
src/core/: IBot.cpp  QQBot.cpp  TGBot.cpp  qq_bot.cpp  tg_bot.cpp
src/interface/: IPlugin.cpp
src/interfaces/: bot.cpp  connection_manager.cpp  plugin.cpp
src/network/: HttpClient.cpp  IConnectionManager.cpp  ProxyHttpClient.cpp  WebsocketClient.cpp  http_client.cpp  proxy_http_client.cpp  websocket_client.cpp
src/onebot11/adapter/: EventConverter.cpp  MessageConverter.cpp  ProtocolAdapter.cpp  event_converter.cpp  message_converter.cpp  protocol_adapter.cpp
src/onebot11/network/http/: ConnectionManager.cpp  connection_manager.cpp
src/onebot11/network/websocket/: ConnectionManager.cpp  connection_manager.cpp
src/plugin/: CMakeLists.txt  main.cpp
src/telegram/adapter/: ProtocolAdapter.cpp  protocol_adapter.cpp
src/telegram/network/http/: ConnectionManager.cpp  connection_manager.cpp
tests/: .gitignore  CMakeLists.txt  TimeoutMechanismTest.cpp  WebsocketQueueTest.cpp  docker-compose.yml  timeout_mechanism_test.cpp  websocket_queue_test.cpp
